refactor(core): extract session request support