@@ -2,7 +2,6 @@ package fun.fengwk.kkstudio.core.agent.session.service.impl;
 
 import fun.fengwk.convention4j.api.page.Page;
 import fun.fengwk.convention4j.api.page.PageQuery;
-import fun.fengwk.kkstudio.core.agent.definition.repo.AgentDefinitionRepository;
 import fun.fengwk.kkstudio.core.agent.definition.service.model.AgentDefinition;
 import fun.fengwk.kkstudio.core.agent.run.service.AgentRunService;
 import fun.fengwk.kkstudio.core.agent.session.repo.AgentSessionEventRepository;
@@ -22,13 +21,12 @@ import fun.fengwk.kkstudio.share.model.AgentSessionMessageCreateDTO;
 import fun.fengwk.kkstudio.share.model.AgentSessionUpdateDTO;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
+import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import fun.fengwk.convention4j.api.page.Page;
 import fun.fengwk.convention4j.api.page.PageQuery;
-import fun.fengwk.kkstudio.core.agent.definition.repo.AgentDefinitionRepository;
 import fun.fengwk.kkstudio.core.agent.definition.service.model.AgentDefinition;
 import fun.fengwk.kkstudio.core.agent.run.service.AgentRunService;
 import fun.fengwk.kkstudio.core.agent.session.repo.AgentSessionEventRepository;
@@ -48,17 +46,17 @@ import fun.fengwk.kkstudio.share.model.AgentSessionMessageCreateDTO;
 import fun.fengwk.kkstudio.share.model.AgentSessionUpdateDTO;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
+import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 /**
  * @author fengwk
  */
+@AllArgsConstructor
 @Service
 public class AgentSessionServiceImpl implements AgentSessionService {
 
-  private final AgentDefinitionRepository agentDefinitionRepository;
   private final AgentSessionRepository agentSessionRepository;
   private final AgentSessionHeadRepository agentSessionHeadRepository;
   private final AgentSessionEventRepository agentSessionEventRepository;
@@ -67,27 +65,7 @@ public class AgentSessionServiceImpl implements AgentSessionService {
   private final AgentSessionMutationFactory sessionMutationFactory;
   private final AgentSessionDefaultHeadAdvancer sessionDefaultHeadAdvancer;
   private final AgentSessionEventBranchLoader sessionEventBranchLoader;
-
-  public AgentSessionServiceImpl(
-      AgentDefinitionRepository agentDefinitionRepository,
-      AgentSessionRepository agentSessionRepository,
-      AgentSessionHeadRepository agentSessionHeadRepository,
-      AgentSessionEventRepository agentSessionEventRepository,
-      AgentRunService agentRunService,
-      AgentSessionConverter agentSessionConverter,
-      AgentSessionMutationFactory sessionMutationFactory,
-      AgentSessionDefaultHeadAdvancer sessionDefaultHeadAdvancer,
-      AgentSessionEventBranchLoader sessionEventBranchLoader) {
-    this.agentDefinitionRepository = agentDefinitionRepository;
-    this.agentSessionRepository = agentSessionRepository;
-    this.agentSessionHeadRepository = agentSessionHeadRepository;
-    this.agentSessionEventRepository = agentSessionEventRepository;
-    this.agentRunService = agentRunService;
-    this.agentSessionConverter = agentSessionConverter;
-    this.sessionMutationFactory = sessionMutationFactory;
-    this.sessionDefaultHeadAdvancer = sessionDefaultHeadAdvancer;
-    this.sessionEventBranchLoader = sessionEventBranchLoader;
-  }
+  private final AgentSessionRequestSupport sessionRequestSupport;
 
   @Override
   public Page<AgentSessionDTO> pageSessions(PageQuery pageQuery) {
@@ -97,8 +75,7 @@ public class AgentSessionServiceImpl implements AgentSessionService {
   @Transactional
   @Override
   public AgentSessionDTO createSession(AgentSessionCreateDTO createDTO) {
-    validateCreateDTO(createDTO);
-    AgentDefinition agent = requireAgent(createDTO.getAgentName());
+    AgentDefinition agent = sessionRequestSupport.requireAgent(createDTO);
 
     LocalDateTime now = LocalDateTime.now();
     AgentSession session = sessionMutationFactory.newSession(agent, createDTO, now);
@@ -116,31 +93,27 @@ public class AgentSessionServiceImpl implements AgentSessionService {
 
   @Override
   public AgentSessionDTO getSession(String sessionId) {
-    AgentSession session = requireSession(sessionId);
+    AgentSession session = sessionRequestSupport.requireSession(sessionId);
     return agentSessionConverter.convert(session);
   }
 
   @Override
   public AgentSessionDTO updateSession(String sessionId, AgentSessionUpdateDTO updateDTO) {
-    requireSession(sessionId);
-    if (updateDTO == null) {
-      throw new IllegalArgumentException("updateDTO must not be null");
+    AgentSession session = sessionRequestSupport.requireSession(sessionId);
+    String title = sessionRequestSupport.normalizeTitle(updateDTO);
+    if (!agentSessionRepository.updateTitleBySessionId(
+        session.getSessionId(), title, LocalDateTime.now())) {
+      throw new IllegalStateException("update session failed: " + session.getSessionId());
     }
-    String title =
-        updateDTO.getTitle() == null || updateDTO.getTitle().isBlank()
-            ? null
-            : updateDTO.getTitle().trim();
-    if (!agentSessionRepository.updateTitleBySessionId(sessionId, title, LocalDateTime.now())) {
-      throw new IllegalArgumentException("session not found: " + sessionId);
-    }
-    return agentSessionConverter.convert(agentSessionRepository.getBySessionId(sessionId));
+    return agentSessionConverter.convert(
+        agentSessionRepository.getBySessionId(session.getSessionId()));
   }
 
   @Override
   public void deleteSession(String sessionId) {
-    requireSession(sessionId);
-    if (!agentSessionRepository.deleteBySessionId(sessionId)) {
-      throw new IllegalArgumentException("session not found: " + sessionId);
+    AgentSession session = sessionRequestSupport.requireSession(sessionId);
+    if (!agentSessionRepository.deleteBySessionId(session.getSessionId())) {
+      throw new IllegalStateException("delete session failed: " + session.getSessionId());
     }
   }
 
@@ -148,8 +121,8 @@ public class AgentSessionServiceImpl implements AgentSessionService {
   @Override
   public AgentSessionEventDTO createMessage(
       String sessionId, AgentSessionMessageCreateDTO createDTO) {
-    String content = requireMessageContent(createDTO);
-    AgentSession session = requireSession(sessionId);
+    String content = sessionRequestSupport.requireMessageContent(createDTO);
+    AgentSession session = sessionRequestSupport.requireSession(sessionId);
 
     String runId = AgentIdentifierGenerator.newRunId();
     AgentSessionEvent userEvent =
@@ -163,67 +136,35 @@ public class AgentSessionServiceImpl implements AgentSessionService {
       throw new IllegalStateException("append user message event failed");
     }
 
-    agentRunService.createQueuedRun(runId, sessionId, userEvent.getEventId());
-    sessionDefaultHeadAdvancer.advanceToLatest(sessionId);
+    agentRunService.createQueuedRun(runId, session.getSessionId(), userEvent.getEventId());
+    sessionDefaultHeadAdvancer.advanceToLatest(session.getSessionId());
     return agentSessionConverter.convert(userEvent);
   }
 
   @Override
   public List<AgentSessionHeadDTO> listHeads(String sessionId) {
-    requireSession(sessionId);
-    return agentSessionHeadRepository.listBySessionId(sessionId).stream()
+    AgentSession session = sessionRequestSupport.requireSession(sessionId);
+    return agentSessionHeadRepository.listBySessionId(session.getSessionId()).stream()
         .map(agentSessionConverter::convert)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
   public List<AgentSessionEventDTO> listEvents(String sessionId, String headEventId) {
-    AgentSession session = requireSession(sessionId);
-    String effectiveHead = headEventId;
-    if (effectiveHead == null || effectiveHead.isBlank()) {
-      effectiveHead = session.getCurrentHeadEventId();
-    }
-    return sessionEventBranchLoader.load(sessionId, effectiveHead).stream()
+    AgentSession session = sessionRequestSupport.requireSession(sessionId);
+    String effectiveHead = sessionRequestSupport.resolveHeadEventId(session, headEventId);
+    return sessionEventBranchLoader.load(session.getSessionId(), effectiveHead).stream()
         .map(agentSessionConverter::convert)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
   public List<AgentSessionEventDTO> listEventsAfter(String sessionId, String afterEventId) {
-    requireSession(sessionId);
-    return agentSessionEventRepository.listBySessionIdAfterEventId(sessionId, afterEventId).stream()
+    AgentSession session = sessionRequestSupport.requireSession(sessionId);
+    return agentSessionEventRepository
+        .listBySessionIdAfterEventId(session.getSessionId(), afterEventId)
+        .stream()
         .map(agentSessionConverter::convert)
-        .collect(Collectors.toList());
-  }
-
-  private AgentDefinition requireAgent(String agentName) {
-    AgentDefinition agent = agentDefinitionRepository.getByName(agentName);
-    if (agent == null) {
-      throw new IllegalArgumentException("agent not found: " + agentName);
-    }
-    return agent;
-  }
-
-  private AgentSession requireSession(String sessionId) {
-    AgentSession session = agentSessionRepository.getBySessionId(sessionId);
-    if (session == null) {
-      throw new IllegalArgumentException("session not found: " + sessionId);
-    }
-    return session;
-  }
-
-  private String requireMessageContent(AgentSessionMessageCreateDTO createDTO) {
-    if (createDTO == null || createDTO.getContent() == null || createDTO.getContent().isBlank()) {
-      throw new IllegalArgumentException("content must not be blank");
-    }
-    return createDTO.getContent();
-  }
-
-  private void validateCreateDTO(AgentSessionCreateDTO createDTO) {
-    if (createDTO == null
-        || createDTO.getAgentName() == null
-        || createDTO.getAgentName().isBlank()) {
-      throw new IllegalArgumentException("agentName must not be blank");
-    }
+        .toList();
   }
 }
